--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 @import "tailwindcss";
+
+:root {
+  --primary-color: #00d8ff;
+}
+
 /* 
 .custom-pagination .swiper-pagination-bullet {
     @apply w-3 h-3 bg-gray-300 opacity-100;
